--- a/RgFem/src/basicio/CMakeLists.txt
+++ b/RgFem/src/basicio/CMakeLists.txt
@@ -1,23 +1,37 @@
 set(HEADERS
-    basicio/DataRecord.h
-    basicio/DataStore.h
-    basicio/DomainDataRecord.h
-    basicio/DumpFile.h
-    basicio/DumpMemStream.h
-    basicio/DumpStream.h
-    basicio/FEPlotData.h
-    basicio/FEPlotDataStore.h
+    DataRecord.h
+    DataStore.h
+    DomainDataRecord.h
+    DumpFile.h
+    DumpMemStream.h
+    DumpStream.h
+    ElementDataRecord.h
+    FEModelDataRecord.h
+    FEPlotData.h
+    FEPlotDataStore.h
+    FaceDataRecord.h
+    NLConstraintDataRecord.h
+    NodeDataRecord.h
+    ObjectDataRecord.h
+    SurfaceDataRecord.h
 )
 
 set(SOURCES
-    basicio/DataRecord.cpp
-    basicio/DataStore.cpp
-    basicio/DomainDataRecord.cpp
-    basicio/DumpFile.cpp
-    basicio/DumpMemStream.cpp
-    basicio/DumpStream.cpp
-    basicio/FEPlotData.cpp
-    basicio/FEPlotDataStore.cpp
+    DataRecord.cpp
+    DataStore.cpp
+    DomainDataRecord.cpp
+    DumpFile.cpp
+    DumpMemStream.cpp
+    DumpStream.cpp
+    ElementDataRecord.cpp
+    FEModelDataRecord.cpp
+    FEPlotData.cpp
+    FEPlotDataStore.cpp
+    FaceDataRecord.cpp
+    NLConstraintDataRecord.cpp
+    NodeDataRecord.cpp
+    ObjectDataRecord.cpp
+    SurfaceDataRecord.cpp
 )
 
 set(BASICIO_SOURCES_
