--- a/RgFem/src/CMakeLists.txt
+++ b/RgFem/src/CMakeLists.txt
@@ -70,6 +70,7 @@ set(FEMCORE_HEADERS
     femcore/Domain/FESolidDomain.h
     femcore/Domain/FESolidDomainFactory.h
     femcore/Domain/FETrussDomain.h
+    femcore/Doamin/FESSIShellDomain.h
     #femcore/DomainDataRecord.h
     #femcore/ElementDataRecord.h
     #femcore/FE3FieldElasticSolidDomain.h
@@ -219,6 +220,8 @@ set(FEMCORE_HEADERS
     femcore/FEFixedDisplacement.h
     femcore/FEFixedRotation.h
     femcore/FETransform.h
+    femcore/FEPrescribedDOF.h
+    femcore/FEPrescribedBC.h
 )
 
 
@@ -247,6 +250,7 @@ set(FEMCORE_SOURCES
     femcore/Domain/FESolidDomain.cpp
     femcore/Domain/FESolidDomainFactory.cpp
     femcore/Domain/FETrussDomain.cpp
+    femcore/Doamin/FESSIShellDomain.h
     #femcore/DomainDataRecord.cpp
     #femcore/ElementDataRecord.cpp
     #femcore/FE3FieldElasticSolidDomain.cpp
@@ -384,6 +388,8 @@ set(FEMCORE_SOURCES
     femcore/FEFixedDisplacement.cpp
     femcore/FEFixedRotation.cpp
     femcore/FETransform.cpp
+    femcore/FEPrescribedDOF.cpp
+    femcore/FEPrescribedBC.cpp
 
 )
 
